--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,14 @@
 {
     "name": "pengw/qq-login-sdk",
     "description": "Third party QQ login for PHP",
+    "type": "project",
+    "license": "mit",
     "authors": [
         {
             "name": "pengw",
             "email": "2943927631@qq.com"
         }
     ],
+    "minimum-stability": "dev",
     "require": {}
 }
