composer.json type修改成library

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "pengw/qq-login-sdk",
     "description": "QQ Login SDK",
-    "type": "project",
-    "license": "mit",
+    "type": "library",
+    "license": "MIT",
     "authors": [
     {
         "name": "pengw",
